policies/block-images-with-volumes/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-images-with-volumes
policies:
  - ../policy.yaml
resources:
  - resources.yaml
context: context.yaml
results:
  - policy: block-images-with-volumes
    isValidatingPolicy: true
    kind: Pod
    resources:
      - good-pod-clean-image
    result: pass
  - policy: block-images-with-volumes
    isValidatingPolicy: true
    kind: Pod
    resources:
      - bad-pod-image-volume
      - bad-pod-init-image-volume
    result: fail
  - policy: block-images-with-volumes
    isValidatingPolicy: true
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
